--- a/admin/www/admin/css/widgets.css
+++ b/admin/www/admin/css/widgets.css
@@ -53,6 +53,17 @@
     margin-bottom: 80px;
 }
 
+.analytics-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 32px;
+    margin-bottom: 40px;
+}
+
+.analytics-grid-forced-3 {
+    grid-template-columns: repeat(3, 1fr);
+}
+
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(15px); }
     to { opacity: 1; transform: translateY(0); }
